--- a/FMACSS-Framework/assets/css/style.css
+++ b/FMACSS-Framework/assets/css/style.css
@@ -1,56 +1,857 @@
 * {
    margin: 0;
    padding: 0;
-   list-style: none;
    text-decoration: none;
 }
 
+:root {
 
+   --color-pg: rgb(237, 107, 26);
+   ;
+}
+
+.dFlex {
+   display: flex;
+}
+
+.dGrid{
+   display: grid;
+}
+
+.btn{
+   padding: 13px 23px;
+   border-radius: 10px;
+   font-size: 14px;
+   text-transform: uppercase;
+   color: white;
+   background-color: var(--color-pg);
+   margin: 15px 0;
+   border: none;
+}
 
 body {
-   background-color: aqua;
+   background-image: url(../img/body-bg.png);
+   background-repeat: no-repeat;
+   background-size: cover;
+  
+   
+
+
 }
+.bgline{
+   background-image: url(../img/svg-bg.png);
+   background-position: cover;
+   
+
+}
+
+
 
 /*header*/
-
 header {
-   background-color: rgb(23, 94, 82);
+   position: absolute;
+   z-index: 1;
+padding: 10px;;
+ 
+
+
+
 }
 
-nav ul {
-   display: flex;
-   gap: 10px;
-   padding: 25px;
-   color: white;
-   font-size: 20px;
-   letter-spacing: 0.5px;
+.icon {
+   height: 30px;
+   margin: 5px;
+
 }
 
+svg:hover .icon {
+   fill: var(--color-pg);
+}
 
-a {
+.menu {
+   width: 100px;
+   height: 35px;
+   color: #fff;
    position: relative;
-   padding: 10px;
-   color: rgba(255, 255, 255, 0.52);
+   font-size: 25px;
+}
+
+.menu>div,
+.menu>svg {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   display: flex;
+}
+
+
+.menu .clone>*,
+.menu .text>* {
+   opacity: 1;
+   transition: 0.3s;
 
 }
 
-a::after {
+.menu .clone>* {
+   transform: translateY(20px);
+   opacity: 0;
+}
+
+.menu:hover .clone>* {
+   opacity: 1;
+   transform: translateY(0px);
+   transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+
+.menu:hover .text>* {
+   opacity: 0;
+   transform: translateY(-20px);
+   transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+
+
+
+.btn-header {
+   width: 155px;
+   height: 45px;
+   border-radius: 8px;
+   border: none;
+   transition: all 0.5s ease-in-out;
+   font-size: 20px;
+   display: flex;
+   align-items: center;
+   background: var(--color-pg);
+   color: white;
+   padding: 10px;
+
+}
+
+.btn-header:hover {
+   box-shadow: 0 0 20px 0px #2e2e2e3a;
+}
+
+.btn-header .icon {
+   position: absolute;
+   height: 40px;
+   width: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: all 0.5s;
+}
+
+.btn-header .text {
+   transform: translateX(40px);
+}
+
+.btn-header:hover .icon {
+   width: 120px;
+
+}
+
+.btn-header:hover .text {
+   transition: all 0.5s;
+   opacity: 0;
+}
+
+.btn-header:focus {
+   outline: none;
+}
+
+.btn-header:active .icon {
+   transform: scale(0.9);
+}
+
+
+/*main*/
+.welcome{
+   height: 100vh;
+}
+
+.main-img {
+   position: relative;
+}
+
+
+.mainBg img {
+   height: auto;
+
+}
+
+.main-img>h1 {
+   position: absolute;
+   top: 310px;
+   left: 330px;
+   text-transform: uppercase;
+   color: white;
+   font-size: 200px;
+   font-weight: bolder;
+   transition: transform 2s ease;
+
+}
+
+.mask-layer img {
+   bottom: -150px;
+   position: absolute;
+   height: auto;
+
+}
+
+.main-img>p {
+   position: absolute;
+   top: 470px;
+   left: 520px;
+   font-family: cursive;
+   color: white;
+   font-size: 25px;
+   z-index: 1;
+}
+
+.main-img:hover h1 {
+   transform: translateY(-40px);
+   transition: transform 2s ease;
+}
+
+.optionsMenu {
+   position: absolute;
+   z-index: 1;
+   background-color: rgba(255, 255, 255, 0.114);
+   padding: 10px;
+   border-radius: 10px;
+   position: absolute;
+   top: 550px;
+   left: 150px;
+   backdrop-filter: blur(10px);
+
+}
+
+.optionsMenu>form>select {
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   border: 1px ridge white;
+   outline: 1px ridge white;
+   padding: 8px;
+   width: 300px;
+   border-radius: 5px;
+   background-color: transparent;
+   font-size: 15px;
+   margin: 8px;
+   color: white;
+
+}
+
+/*dIV*/
+
+.aboutUs {
+   display: grid;
+   grid-template-columns: 2fr 1fr;
+   margin: 200px 0 400px 0;
+   
+}
+
+.content{
+   margin: 50px;
+}
+
+
+.content>p {
+   font-family: cursive;
+   color: var(--color-pg);
+   font-size: 30px;
+}
+
+.content>h1 {
+   text-transform: uppercase;
+   font-size: 40px;
+   width: 90%;
+
+}
+
+
+
+.swiper {
+   width: 280px;
+   height: 380px;
+
+ }
+
+ 
+
+ .swiper-slide {
+   border-radius: 18px;
+ }
+ 
+
+ .swiper-slide img {
+width: 100%; 
+height: 100%; 
+object-fit: cover; 
+}
+
+
+
+/*cards*/
+
+
+
+.cards-tittle>p {
+   font-family: cursive;
+   color: var(--color-pg);
+   font-size: 30px;
+
+}
+
+.cards-tittle>h1 {
+   text-transform: uppercase;
+}
+
+.cards {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr 1fr;
+   gap: 40px;
+}
+
+
+.card {
+   width: 100%;
+   border-radius: 10px;
+   overflow: hidden;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+   background-color: #fff;
+   transition: transform 0.3s ease-in-out;
+   position: relative;
+   margin-bottom: -35px;
+
+}
+
+.card:hover {
+   transform: scale(1.05);
+}
+
+.card-img {
+   width: 100%;
+   height: 330px;
+   overflow: hidden;
+}
+
+.card-img img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+.card-content {
+   transform: translateY(-15px);
+   padding: 20px;
+   border-top-right-radius: 20px;
+   border-top-left-radius: 20px;
+   border-top: 15px solid white;
+}
+
+.card-info {
+   margin-bottom: 20px;
+}
+
+.card-info h1 {
+   font-size: 24px;
+   font-weight: 600;
+   margin-bottom: 10px;
+   text-transform: uppercase;
+}
+
+.card-info h1:hover {
+   color: var(--color-pg);
+}
+
+.card-location,
+.card-date,
+.card-persons {
+   margin-right: 20px;
+}
+
+.card-location h5 {
+   font-size: 16px;
+   line-height: 1.5;
+   color: #666;
+}
+
+.card-footer p {
+   font-size: 14px;
+   color: #666;
+}
+
+.card-footer {
+   padding: 10px;
+   background-color: #f8f9fa;
+   text-align: center;
+}
+
+.card-footer h4 {
+   display: inline-block;
+   padding: 10px 20px;
+   background-color: transparent;
+   color: var(--color-pg);
+   border: 1px solid var(--color-pg);
+   text-decoration: none;
+   border-radius: 5px;
+   transition: background-color 0.3s ease-in-out;
+   cursor: pointer;
+  
+}
+
+.card-footer h4:hover {
+   background-color: var(--color-pg);
+   color: white;
+  
+}
+
+.card-content .img-xs {
+   width: 18px;
+   height: 18px;
+   object-fit: cover;
+   margin-right: 10px;
+}
+
+
+
+
+.ui-bookmark {
+   --icon-size: 24px;
+   --icon-secondary-color: rgb(77, 77, 77);
+   --icon-hover-color: rgb(97, 97, 97);
+   --icon-primary-color: gold;
+   --icon-circle-border: 1px solid var(--icon-primary-color);
+   --icon-circle-size: 35px;
+   --icon-anmt-duration: 0.3s;
+   position: absolute;
+   top: 0px;
+   padding: 5px;
+   margin: 10px;
+   background-color: rgba(255, 255, 255, 0.422);
+ }
+ 
+ .ui-bookmark input {
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+   display: none;
+ }
+ 
+ .ui-bookmark .bookmark {
+   width: var(--icon-size);
+   height: auto;
+   fill: var(--icon-secondary-color);
+   cursor: pointer;
+   -webkit-transition: 0.2s;
+   -o-transition: 0.2s;
+   transition: 0.2s;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
+   justify-content: center;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   position: relative;
+   -webkit-transform-origin: top;
+   -ms-transform-origin: top;
+   transform-origin: top;
+ }
+ 
+ .bookmark::after {
    content: "";
    position: absolute;
+   width: 10px;
+   height: 10px;
+   -webkit-box-shadow: 0 30px 0 -4px var(--icon-primary-color),
+     30px 0 0 -4px var(--icon-primary-color),
+     0 -30px 0 -4px var(--icon-primary-color),
+     -30px 0 0 -4px var(--icon-primary-color),
+     -22px 22px 0 -4px var(--icon-primary-color),
+     -22px -22px 0 -4px var(--icon-primary-color),
+     22px -22px 0 -4px var(--icon-primary-color),
+     22px 22px 0 -4px var(--icon-primary-color);
+   box-shadow: 0 30px 0 -4px var(--icon-primary-color),
+     30px 0 0 -4px var(--icon-primary-color),
+     0 -30px 0 -4px var(--icon-primary-color),
+     -30px 0 0 -4px var(--icon-primary-color),
+     -22px 22px 0 -4px var(--icon-primary-color),
+     -22px -22px 0 -4px var(--icon-primary-color),
+     22px -22px 0 -4px var(--icon-primary-color),
+     22px 22px 0 -4px var(--icon-primary-color);
+   border-radius: 50%;
+   -webkit-transform: scale(0);
+   -ms-transform: scale(0);
+   transform: scale(0);
+ }
+ 
+ .bookmark::before {
+   content: "";
+   position: absolute;
+   border-radius: 50%;
+   border: var(--icon-circle-border);
+   opacity: 0;
+ }
+ 
+ /* actions */
+ 
+ .ui-bookmark:hover .bookmark {
+   fill: var(--icon-hover-color);
+ }
+ 
+ .ui-bookmark input:checked + .bookmark::after {
+   -webkit-animation: circles var(--icon-anmt-duration)
+     cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+   animation: circles var(--icon-anmt-duration)
+     cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+   -webkit-animation-delay: var(--icon-anmt-duration);
+   animation-delay: var(--icon-anmt-duration);
+ }
+ 
+ .ui-bookmark input:checked + .bookmark {
+   fill: var(--icon-primary-color);
+   -webkit-animation: bookmark var(--icon-anmt-duration) forwards;
+   animation: bookmark var(--icon-anmt-duration) forwards;
+   -webkit-transition-delay: 0.3s;
+   -o-transition-delay: 0.3s;
+   transition-delay: 0.3s;
+ }
+ 
+ .ui-bookmark input:checked + .bookmark::before {
+   -webkit-animation: circle var(--icon-anmt-duration)
+     cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+   animation: circle var(--icon-anmt-duration)
+     cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+   -webkit-animation-delay: var(--icon-anmt-duration);
+   animation-delay: var(--icon-anmt-duration);
+ }
+ 
+ @-webkit-keyframes bookmark {
+   50% {
+     -webkit-transform: scaleY(0.6);
+     transform: scaleY(0.6);
+   }
+ 
+   100% {
+     -webkit-transform: scaleY(1);
+     transform: scaleY(1);
+   }
+ }
+ 
+ @keyframes bookmark {
+   50% {
+     -webkit-transform: scaleY(0.6);
+     transform: scaleY(0.6);
+   }
+ 
+   100% {
+     -webkit-transform: scaleY(1);
+     transform: scaleY(1);
+   }
+ }
+ 
+ @-webkit-keyframes circle {
+   from {
+     width: 0;
+     height: 0;
+     opacity: 0;
+   }
+ 
+   90% {
+     width: var(--icon-circle-size);
+     height: var(--icon-circle-size);
+     opacity: 1;
+   }
+ 
+   to {
+     opacity: 0;
+   }
+ }
+ 
+ @keyframes circle {
+   from {
+     width: 0;
+     height: 0;
+     opacity: 0;
+   }
+ 
+   90% {
+     width: var(--icon-circle-size);
+     height: var(--icon-circle-size);
+     opacity: 1;
+   }
+ 
+   to {
+     opacity: 0;
+   }
+ }
+ 
+ @-webkit-keyframes circles {
+   from {
+     -webkit-transform: scale(0);
+     transform: scale(0);
+   }
+ 
+   40% {
+     opacity: 1;
+   }
+ 
+   to {
+     -webkit-transform: scale(0.8);
+     transform: scale(0.8);
+     opacity: 0;
+   }
+ }
+ 
+ @keyframes circles {
+   from {
+     -webkit-transform: scale(0);
+     transform: scale(0);
+   }
+ 
+   40% {
+     opacity: 1;
+   }
+ 
+   to {
+     -webkit-transform: scale(0.8);
+     transform: scale(0.8);
+     opacity: 0;
+   }
+ }
+
+
+
+.aboutCitys{
+   display: grid;
+   grid-template-rows: 1fr 1fr 1fr;
+   gap: 100px;
+   margin: 100px 0;
+   
+}
+
+
+
+.city-title {
+   margin: 30px;
+}
+
+.city-title>p {
+   font-family: cursive;
+   color: var(--color-pg);
+   font-size: 30px;
+}
+
+.city-title>h1 {
+   text-transform: uppercase;
+   font-size: 30px;
+}
+
+
+
+.city-content {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 50px;
+   align-items: center;
+   justify-content: center;
+ 
+
+}
+.city-img {
+   border-radius: 20px;
+   border: ridge;
+   padding: 10px;
    background-color: white;
-   height: 3px;
-   width: 0;
-   left: 0;
-   top: -10px;
-   transition: 0.5s;
+   width: 600px;
+   height: 400px;
+  
 }
 
-a:hover:after {
+.city-img img {
+   border-radius: 20px;
+  height: 100%;
    width: 100%;
+ 
+  
+}
+
+.city-info {
+   margin: 70px 30px;
+   width: 400px;
+}
+
+.city-info>h1 {
+   font-size: 40px;
+   text-transform: uppercase;
+}
+
+
+
+
+.discount {
+   border: 0.3px ridge rgb(103, 102, 102);
+   margin: 70px 0;
+   border-radius: 20px;
+   height: 580px;
+}
+
+.discount-content {
+   border-radius: 20px;
+   border: 1px solid black;
+   margin: 10px;
+   position: relative;
+   height: 560px;
+   background-image: url(../img/discount-banner.png);
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
 
 }
 
-a:hover {
+.discount-content img {
+   width: 35%;
+   position: absolute;
+   top: 40px;
+   left: 50px;
+
+
+}
+
+.discount-info {
+   position: absolute;
+   bottom: 130px;
+   left: 650px;
+   z-index: 1;
+
+}
+
+.discount-info h1 {
+   font-size: 80px;
+   text-transform: uppercase;
    color: white;
+   padding-top: 10px;
 
 }
+
+.discount-info h3 {
+   font-size: 20px;
+   text-transform: uppercase;
+   color: var(--color-pg);
+   padding-top: 10px;
+}
+
+
+
+.discount-info p {
+   width: 80%;
+   color: white;
+   padding: 20px 0;
+
+}
+
+.discount-offer {
+   width: 130px;
+   height: 130px;
+   background-color: var(--color-pg);
+   text-align: center;
+   border-radius: 50%;
+   color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   font-size: 25px;
+   position: absolute;
+   top: 30px;
+   right: 80px;
+   transform: rotate(20deg);
+   transform-origin: top left;
+}
+
+.discount-offer span:first-child {
+   font-size: 45px;
+}
+
+.scoll-content{
+   gap: 20px;
+
+}
+
+.scrollImg {
+   position: relative;
+   overflow: hidden;
+    height: 300px;
+ 
+ }
+
+
+ .scroller {
+   position: absolute;
+   top: 0;
+   left: 0;
+height: 400px;
+   overflow: hidden;
+   animation: scroll-x 30s linear infinite;
+ }
+ 
+ .scroller-inner {
+   display: flex;
+   animation: scroll-x linear infinite;
+   margin: 0;
+   padding: 0;
+   border-radius: 10px;
+  
+ }
+ 
+
+
+ .zoom-img {
+   width: 200px;
+   height:auto;
+   overflow: hidden;
+   margin: 0 10px;
+   border-radius: 10px;
+   padding: 0;
+ }
+ 
+ .zoom-img  img {
+   width: 100%;
+   transition: all .3s ease-in-out;
+ }
+ 
+ .zoom-img img:hover   {
+   transform: scale(1.2);
+ }
+
+
+
+ 
+ 
+ @keyframes scroll-x {
+   0% {
+     transform: translateX(0);
+   }
+   100% {
+     transform: translateX(-50%); /* scroll to the middle of the second set of images */
+   }
+ }
+
+
+
+
+footer {
+   border-radius: 10px; 
+   background-color:transparent;
+   padding: 10px;
+margin: 10px;
+border: 1px solid gray;
+}
+
+
+
+
+
+
+
