--- a/FMACSS-Framework/assets/css/style.css
+++ b/FMACSS-Framework/assets/css/style.css
@@ -2,6 +2,7 @@
    margin: 0;
    padding: 0;
    text-decoration: none;
+   
 }
 
 /*variables*/
@@ -49,14 +50,48 @@
    font-size: 25px;
 }
 
-.btn {
-   padding: 13px 23px;
-   border-radius: 10px;
-   font-size: 14px;
-   color: var(--color-white);
-   background-color: var(--color-pg);
-   border: none;
+.m-top{
+   margin-top: 10px;
 }
+
+.btn {
+   width: 140px;
+   height: 48px;
+   background: linear-gradient(to top, #ec6911, #ef790b, #f46f23);
+   color: #fff;
+   border-radius: 20px;
+   border: none;
+   outline: none;
+   cursor: pointer;
+   overflow: hidden;
+   
+ }
+
+ .btn span {
+   font-size: 14px;
+   transition: top 0.5s;
+ }
+ 
+
+.btn-text-one {
+   top: 50%;
+   left: 0;
+   transform: translateY(-50%);
+ }
+ 
+ .btn-text-two {
+   top: 150%;
+   left: 0;
+   transform: translateY(-50%);
+ }
+ 
+ .btn:hover .btn-text-one {
+   top: -100%;
+ }
+ 
+ .btn:hover .btn-text-two {
+   top: 50%;
+ }
 
 body {
    background-image: url(../img/body-bg.png);
@@ -207,6 +242,7 @@ svg:hover .icon {
    transition: transform 2s ease;
 }
 
+
 .optionsMenu {
    z-index: 1;
    background-color: rgba(255, 255, 255, 0.114);
@@ -245,7 +281,6 @@ svg:hover .icon {
    height: 380px;
 
 }
-
 
 
 .swiper-slide {
@@ -531,10 +566,6 @@ svg:hover .icon {
    font-size: 45px;
 }
 
-.city-content {
-   grid-template-columns: 2fr 1fr;
-
-}
 
 .city-img {
    border-radius: 20px;
@@ -574,37 +605,34 @@ svg:hover .icon {
 
 .discount {
    border: 0.3px ridge rgb(103, 102, 102);
-   margin: 70px 0;
+   margin: 70px 10px;
    border-radius: 20px;
-   height: 580px;
+   height: auto;
 }
 
 .discount-content {
    border-radius: 20px;
    border: 1px solid black;
-   margin: 10px;
    height: 560px;
    background-image: url(../img/discount-banner.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
+   padding: 10px;
+
 
 }
 
 .discount-content img {
-   width: 35%;
-   top: 40px;
-   left: 50px;
-
+width: 130%;
 
 }
 
-.discount-info {
-   bottom: 130px;
-   left: 650px;
-   z-index: 1;
-
+.discount-info{
+   z-index: 2;
+   margin-left: 40px;
 }
+
 
 .discount-info h1 {
    font-size: 80px;
@@ -635,10 +663,12 @@ svg:hover .icon {
    border-radius: 50%;
    color: white;
    font-size: 25px;
-   top: 30px;
+   top: -100px;
    right: 80px;
    transform: rotate(20deg);
    transform-origin: top left;
+   z-index: -1;
+  
 }
 
 .discount-offer span:first-child {
@@ -900,6 +930,93 @@ footer {
    font-size: 20px;
 }
 
+
 @media only screen and (max-width:  1080px){
+    
    .cards{ grid-template-columns: 1fr 1fr;}
+   .main-img>h1 {
+      font-size: 100px;
+      top: 240px;
+      left: 340px;
+  }
+
+  .main-img>p {
+      top: 330px;
+      left: 380px;
+      font-size: 20px;
+  }
+
+  .mask-layer img {
+      bottom: -90px;
+  }
+   
+  .optionsMenu{
+   top: 500px;
+   width: 100%;
+   left: auto;
+
+  }
+ 
+  .city-content{
+   flex-direction: column-reverse;
+   width: 100%;
+   margin: 10px;
+  }
+
+  .city-content:nth-child(2){
+   flex-direction: column;
+  }
+
+  .city-img {
+   width: 900px;
+   height: 500px;
+
+}
+
+.city-info {
+   width: 900px;
+}
+
+.all-page-p {
+   padding: 2rem;
+}
+
+
+
+
+.footer-info { grid-template-columns: 1fr 1fr;}
+
+
+.border-none{
+   border: none;
+}
+
+.site-info{
+   flex-direction: column;
+   gap: 20px;
+   padding: 10px;
+}
+
+
+}
+ 
+@media only screen and (max-width: 600px) {
+
+   .aboutUs{ grid-template-rows: 1fr 1fr;
+
+   }
+   .cards{
+      grid-template-columns: 1fr;
+      gap: 50px;
+   }
+
+   .all-page-p {
+      padding: 2rem;
+   }
+
+   .city-content{
+      width: 20%;
+      margin: 10px;
+      justify-content: center;
+   }
 }
