--- a/FMACSS-Framework/assets/css/style.css
+++ b/FMACSS-Framework/assets/css/style.css
@@ -2,7 +2,7 @@
    margin: 0;
    padding: 0;
    text-decoration: none;
-   
+ 
 }
 
 /*variables*/
@@ -54,6 +54,11 @@
    margin-top: 10px;
 }
 
+.cursor-p{
+   cursor: pointer;
+}
+
+
 .btn {
    width: 140px;
    height: 48px;
@@ -62,7 +67,6 @@
    border-radius: 20px;
    border: none;
    outline: none;
-   cursor: pointer;
    overflow: hidden;
    
  }
@@ -264,17 +268,11 @@ svg:hover .icon {
 
 }
 
-/*dIV*/
-
-
-
 .aboutUs {
    grid-template-columns: 2fr 1fr;
-   margin: 200px 0 250px 0;
+   margin: 200px 0 ;
 
 }
-
-
 
 .swiper {
    width: 280px;
@@ -282,11 +280,9 @@ svg:hover .icon {
 
 }
 
-
 .swiper-slide {
    border-radius: 18px;
 }
-
 
 .swiper-slide img {
    width: 100%;
@@ -298,14 +294,11 @@ svg:hover .icon {
    grid-template-columns: 1fr 1fr 1fr 1fr;
 
 }
-
-
 .card {
    border-radius: 10px;
    overflow: hidden;
    background-color: #fff;
    transition: transform 0.3s ease-in-out;
-
 }
 
 .card:hover {
@@ -348,6 +341,7 @@ svg:hover .icon {
 .card-date,
 .card-persons {
    margin-right: 20px;
+
 }
 
 .card-location h5 {
@@ -376,7 +370,6 @@ svg:hover .icon {
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s ease-in-out;
-   cursor: pointer;
 
 }
 
@@ -390,10 +383,8 @@ svg:hover .icon {
    width: 18px;
    height: 18px;
    object-fit: cover;
-   margin-right: 10px;
+ 
 }
-
-
 
 
 .ui-bookmark {
@@ -426,14 +417,6 @@ svg:hover .icon {
    position: absolute;
    width: 10px;
    height: 10px;
-   box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-      30px 0 0 -4px var(--icon-primary-color),
-      0 -30px 0 -4px var(--icon-primary-color),
-      -30px 0 0 -4px var(--icon-primary-color),
-      -22px 22px 0 -4px var(--icon-primary-color),
-      -22px -22px 0 -4px var(--icon-primary-color),
-      22px -22px 0 -4px var(--icon-primary-color),
-      22px 22px 0 -4px var(--icon-primary-color);
    border-radius: 50%;
    transform: scale(0);
 }
@@ -581,7 +564,6 @@ svg:hover .icon {
    height: 100%;
    width: 100%;
 
-
 }
 
 .city-info {
@@ -598,7 +580,7 @@ svg:hover .icon {
    font-size: 20px;
    line-height: 25px;
    letter-spacing: 0.5px;
-   width: 100%;
+
 
 }
 
@@ -923,7 +905,8 @@ footer {
 }
 
 .footer-end {
-   margin: 0 20px;
+   margin: 0 35px;
+
 }
 
 .footer-end>div>p {
@@ -932,23 +915,24 @@ footer {
 
 
 @media only screen and (max-width:  1080px){
+
+   .mask-layer{
+      transform: translateY(-45px);
+   }
+
+   .main-img>h1{
+      font-size: 100px;
+      top: 270px;
+   }
+
+   .main-img>p{
+      font-size: 20px;
+      top: 350px;
+      left: 375px;
+   }
     
    .cards{ grid-template-columns: 1fr 1fr;}
-   .main-img>h1 {
-      font-size: 100px;
-      top: 240px;
-      left: 340px;
-  }
 
-  .main-img>p {
-      top: 330px;
-      left: 380px;
-      font-size: 20px;
-  }
-
-  .mask-layer img {
-      bottom: -90px;
-  }
    
   .optionsMenu{
    top: 500px;
@@ -959,29 +943,22 @@ footer {
  
   .city-content{
    flex-direction: column-reverse;
-   width: 100%;
-   margin: 10px;
+
   }
 
   .city-content:nth-child(2){
    flex-direction: column;
   }
 
-  .city-img {
-   width: 900px;
-   height: 500px;
-
-}
 
 .city-info {
    width: 900px;
 }
 
+
 .all-page-p {
    padding: 2rem;
 }
-
-
 
 
 .footer-info { grid-template-columns: 1fr 1fr;}
@@ -1001,22 +978,81 @@ footer {
 }
  
 @media only screen and (max-width: 600px) {
-
-   .aboutUs{ grid-template-rows: 1fr 1fr;
-
-   }
-   .cards{
-      grid-template-columns: 1fr;
-      gap: 50px;
+  
+   body{
+      margin: 0 ;
+      padding: 0;
    }
 
    .all-page-p {
       padding: 2rem;
    }
 
+
+   .bgline{
+      background-image: none;
+   }
+
+
+   .content{
+      width: 100%;
+   }
+  
+   .cards{
+      grid-template-columns: 1fr;
+      gap: 50px;
+   }
+
    .city-content{
-      width: 20%;
-      margin: 10px;
       justify-content: center;
+      padding:0 ;
+   }
+  
+.city-info{
+   width: 400px;
+   margin: 0 10px;
+}
+
+   .discount-content{
+      flex-direction: column-reverse;
+      
+   }
+
+   .discount-img{
+      width: 35%;
+   }
+
+   .discount-info{
+      font-size: 15px;
+      transform: translateY(140px);
+   }
+
+   .discount-info>h1{
+      font-size: 35px;
+   }
+
+   .discount-offer {
+      width: 80px;
+      height: 80px;
+      font-size: 20px;
+      top: -40px;
+      right: 80px;
+     
+   
+   }
+
+
+.discount-offer span:first-child {
+   font-size: 30px;
+}
+
+  
+   .footer-logo{
+      width: 70%;
+      
+   }
+
+   .categories{
+      grid-template-columns: 1fr 1fr;
    }
 }
