--- a/FMACSS-Framework/assets/css/style.css
+++ b/FMACSS-Framework/assets/css/style.css
@@ -68,7 +68,6 @@
    border: none;
    outline: none;
    overflow: hidden;
-
 }
 
 .btn span {
@@ -255,7 +254,7 @@ svg:hover .icon {
 .optionsMenu {
    z-index: 1;
    background-color: rgba(255, 255, 255, 0.114);
-   border-radius: 10px;
+   border-radius: 15px;
    top: 550px;
    left: 150px;
    backdrop-filter: blur(10px);
@@ -267,7 +266,7 @@ svg:hover .icon {
    border: 1px ridge var(--color-white);
    outline: 1px ridge var(--color-white);
    width: 300px;
-   border-radius: 5px;
+   border-radius: 10px;
    background-color: transparent;
    color: var(--color-white);
 
@@ -286,12 +285,10 @@ svg:hover .icon {
 }
 
 .swiper-slide {
-   border-radius: 18px;
+   border-radius: 10px;
 }
 
 .swiper-slide img {
-   width: 100%;
-   height: 100%;
    object-fit: cover;
 }
 
@@ -301,7 +298,7 @@ svg:hover .icon {
 }
 
 .card {
-   border-radius: 10px;
+   border-radius: 15px;
    overflow: hidden;
    background-color: #fff;
    transition: transform 0.3s ease-in-out;
@@ -362,7 +359,6 @@ svg:hover .icon {
 }
 
 .card-footer {
-   padding: 10px;
    background-color: #f8f9fa;
 
 }
@@ -545,11 +541,6 @@ svg:hover .icon {
 }
 
 
-.aboutCitys {
-   grid-template-rows: 1fr 1fr 1fr;
-   gap: 100px;
-
-}
 
 .city-title>h1 {
    font-size: 45px;
@@ -557,7 +548,7 @@ svg:hover .icon {
 
 
 .city-img {
-   border-radius: 20px;
+   border-radius: 15px;
    border: ridge;
    background-color: white;
    width: 650px;
@@ -566,14 +557,13 @@ svg:hover .icon {
 }
 
 .city-img img {
-   border-radius: 20px;
+   border-radius: 15px;
    height: 100%;
    width: 100%;
 
 }
 
 .city-info {
-   margin: 70px 30px;
    width: 500px;
 }
 
@@ -586,20 +576,18 @@ svg:hover .icon {
    font-size: 20px;
    line-height: 25px;
    letter-spacing: 0.5px;
-
-
 }
 
 
 .discount {
    border: 0.3px ridge rgb(103, 102, 102);
    margin: 70px 10px;
-   border-radius: 20px;
+   border-radius: 15px;
    height: auto;
 }
 
 .discount-content {
-   border-radius: 20px;
+   border-radius: 15px;
    border: 1px solid black;
    height: 560px;
    background-image: url(../img/discount-banner.png);
@@ -685,16 +673,14 @@ svg:hover .icon {
 
 .scroller-inner {
    animation: scroll-x linear infinite;
-   border-radius: 10px;
+   
 }
 
 .zoom-img {
    width: 200px;
-   height: auto;
    overflow: hidden;
    margin: 0 10px;
    border-radius: 10px;
-   padding: 0;
 }
 
 .zoom-img img {
@@ -720,14 +706,14 @@ svg:hover .icon {
 
 
 footer {
-   border-radius: 10px;
+   border-radius: 15px;
    background-color: transparent;
    border: 1px solid rgba(128, 128, 128, 0.393);
 }
 
 .footer-content {
    background-color: white;
-   border-radius: 10px;
+   border-radius: 15px;
 }
 
 .line-right {
@@ -781,7 +767,6 @@ footer {
 
 .categories>div>ul>li {
    margin-bottom: 10px;
-
 }
 
 .categories a {
@@ -1001,45 +986,46 @@ footer {
       top: 345px;
       left: 50px;
       color: var(--color-white);
-      font-size: 130px;
+      font-size: 140px;
       transition: transform 2s ease;
 
    }
 
    .mobileImg:hover h1 {
-      transform: translateY(-70px);
+      transform: translateY(-60px);
    }
 
    .mobileImg>p {
-      top: 523px;
-      left: 130px;
+      top: 520px;
+      left: 140px;
       font-size: 23px;
       font-family: cursive;
       color: var(--color-white);
-      z-index: 1;
+      z-index: 2;
    }
 
    .banner-mobile img {
-      width: 100vh;
+      width: 100%;
       height: auto;
    }
 
    .mobile-mask img {
-      width: 100vh;
+      width: 100%;
       height: auto;
-      background-image: url(../img/body-bg.png);
+     
 
 
 
    }
 
    .mobile-mask {
-      top: 213px;
+      width: 100%;
+      top: 240px;
    }
 
 
    .optionsMenu {
-      top: -800px;
+      top: -600px;
       flex-direction: column;
       margin: 0 20px;
 
@@ -1052,10 +1038,6 @@ footer {
       margin: 10px;
    }
 
-   .aboutUs {
-      grid-template-columns: 1fr;
-      gap: 30px;
-   }
 
    .content {
       display: flex;
@@ -1065,7 +1047,9 @@ footer {
    .mobile-margin-top {
       margin-top: 600px;
    }
-
+   .aboutCitys{
+      display: block;
+   }
 
    .bgline {
       background-image: none;
