--- a/FMACSS-Framework/assets/css/style.css
+++ b/FMACSS-Framework/assets/css/style.css
@@ -100,6 +100,7 @@ body {
    background-image: url(../img/body-bg.png);
    background-size: cover;
    background-repeat: no-repeat;
+  
 }
 
 .bgline {
@@ -986,7 +987,7 @@ footer {
       top: 345px;
       left: 50px;
       color: var(--color-white);
-      font-size: 140px;
+      font-size: 130px;
       transition: transform 2s ease;
 
    }
@@ -1027,7 +1028,8 @@ footer {
    .optionsMenu {
       top: -600px;
       flex-direction: column;
-      margin: 0 20px;
+      left: 0;
+
 
    }
 
@@ -1036,6 +1038,13 @@ footer {
       justify-content: center;
       flex-direction: column;
       margin: 10px;
+   }
+
+   .aboutUs {
+      grid-template-columns: 1fr;
+      gap: 60px;
+     margin-top: 0px;
+     
    }
 
 
@@ -1049,6 +1058,7 @@ footer {
    }
    .aboutCitys{
       display: block;
+    
    }
 
    .bgline {
@@ -1061,7 +1071,7 @@ footer {
    }
 
    .city-content {
-      margin: 0;
+      margin-bottom: 40px;
    }
 
    .city-img {
@@ -1072,6 +1082,7 @@ footer {
    .city-info {
       width: 500px;
       margin-bottom: 10px;
+      margin-top: 40px;
 
    }
 
