--- a/FMACSS-Framework/assets/css/style.css
+++ b/FMACSS-Framework/assets/css/style.css
@@ -5,6 +5,8 @@
 
 }
 
+
+
 /*variables*/
 
 :root {
@@ -106,7 +108,7 @@ body {
    background-image: url(../img/body-bg.png);
    background-size: cover;
    background-repeat: no-repeat;
-  
+   
 }
 
 .bgline {
@@ -229,7 +231,7 @@ svg:hover .icon {
 }
 
 .main-img>h1 {
-   top: 310px;
+   top: 300px;
    left: 330px;
    color: var(--color-white);
    font-size: 200px;
@@ -261,7 +263,6 @@ svg:hover .icon {
 .optionsMenu {
    z-index: 1;
    background-color: rgba(255, 255, 255, 0.114);
-   border-radius: 15px;
    top: 550px;
    left: 150px;
    backdrop-filter: blur(10px);
@@ -698,14 +699,12 @@ svg:hover .icon {
 
 
 footer {
-   border-radius: 15px;
    background-color: transparent;
    border: 1px solid rgba(128, 128, 128, 0.393);
 }
 
 .footer-content {
    background-color: white;
-   border-radius: 15px;
 }
 
 .line-right {
@@ -1038,18 +1037,19 @@ footer {
       flex-direction: column;
       margin: 10px;
    }
-
-   .aboutUs {
-      grid-template-columns: 1fr;
-      gap: 60px;
-     margin-top: 0px;
-     
+   
+   .aboutUs{
+      margin-top: 0;
    }
-
+   
 
    .content {
       display: flex;
       flex-direction: column;
+   }
+
+   .swiper{
+      margin-top: 50px;
    }
 
    .mobile-margin-top {
